package com.example.wblog.bean;

import java.io.Serializable;
import lombok.Data;

/**
 * roles
 * @author 
 */
public class Role {
    private Long id;
    private String name;

    public Role() {
    }

    public Role(Long id, String name) {
        this.id = id;
        this.name = name;
    }

    public Long getId() {
        return id;
    }

    public void setId(Long id) {
        this.id = id;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }


    private static final long serialVersionUID = 1L;
}